Failed 18C XE Installation

--- a/inventory/group_vars/XE.yml
+++ b/inventory/group_vars/XE.yml
@@ -1,13 +1,6 @@
 ---
 # ------------------------------------------------------------------------------
-# Oracle database hosts
+# Configuration for XE database
 # ------------------------------------------------------------------------------
 
-V19C:
-  hosts:
-    dural.yaocm.id.au
-
-XE:
-  hosts:
-    xe.yaocm.id.au
 ...
