Completed XE Release
Added TOC to 2021-01-23 Journal Entry

Issue #5 "XE: Using discovered Python interpreter"

Updated Firewall Configuration

Resolved "XE: Firewall needs to be reloaded after rule changes #10"
- Split firewalls between Oracle listener and Enterprise Manager Express
- Added handler to reload firewall rules

Added untested code for Python3 on OL7

Added design journal entries

--- a/install_XE_database.yml
+++ b/install_XE_database.yml
@@ -86,22 +86,21 @@
   when:                 configure_xe.stdout_lines is defined
 
 # ------------------------------------------------------------------------------
-# Configure the firewall
+# Configure the firewall for Enterprise Manager Express
 # ------------------------------------------------------------------------------
 
-- name:                 "Configure the firewall"
+- name:                 "Configure the firewall for Enterprise Manager Express"
   firewalld:
     permanent:          yes
     port:               "{{ item }}"
     state:              enabled
     zone:               public
   with_items:
-    -                   "1521/tcp"
-    -                   "1521/udp"
     -                   "5500/tcp"
     -                   "5500/udp"
   become:               yes
   become_user:          root
+  notify:              "Reload FireWall Rules"
 
 # ------------------------------------------------------------------------------
 # Automating Shutdown and Startup
