--- a/ol7_tasks.yml
+++ b/ol7_tasks.yml
@@ -14,50 +14,84 @@
   become:               yes
   become_user:          root
 
-- name:                 "Copy PIP2 validation script to remote host"
-  copy:
-    src:                files/validate_pip2.sh
-    dest:               /tmp/validate_pip2.sh
-    mode:               '0700'
+# ------------------------------------------------------------------------------
+# Python2 specific tasks to install a downgraded version of PIP2
+# ------------------------------------------------------------------------------
 
-- name:                 "Validate PIP2 installation"
-  command:
-    argv:
-      -                 /tmp/validate_pip2.sh
-  register:             check_pip2
-  failed_when:          false
-  changed_when:         false
-
-- name:                 "Display output from PIP2 validation"
-  debug:
-    var:                check_pip2
-  when:                 check_pip2 is defined
-  
-- name:                 "Download and install fix for PIP2"
+- name:                 "Python2 specific tasks"
   block:
-  
-  - name:               "Download fix for PIP2"
-    get_url:
-      dest:             /tmp/get-pip.py
-      url:              "https://bootstrap.pypa.io/2.7/get-pip.py"
+
+  - name:               "Copy PIP2 validation script to remote host"
+    copy:
+      src:              files/validate_pip2.sh
+      dest:             /tmp/validate_pip2.sh
       mode:             '0700'
 
-  - name:               "Install correct version of PIP2"
+  - name:               "Validate PIP2 installation"
     command:
       argv:
-        -               /tmp/get-pip.py
-    become:             yes
-    become_user:        root
-    register:           install_pip2
+        -               /tmp/validate_pip2.sh
+    register:           check_pip2
+    failed_when:        false
+    changed_when:       false
 
-  - name:               "Display output from PIP2 installation"
+  - name:               "Display output from PIP2 validation"
     debug:
-      var:              install_pip2.stdout_lines
-    when:               install_pip2.stdout_lines is defined
+      var:              check_pip2
+    when:               check_pip2 is defined
 
-  when:
-    -                   check_pip2.rc is defined
-    -                   check_pip2.rc > 0
+  - name:               "Download and install fix for PIP2"
+    block:
+
+    - name:             "Download fix for PIP2"
+      get_url:
+        dest:           /tmp/get-pip.py
+        url:            "https://bootstrap.pypa.io/2.7/get-pip.py"
+        mode:           '0700'
+
+    - name:             "Install correct version of PIP2"
+      command:
+        argv:
+          -             /tmp/get-pip.py
+      become:           yes
+      become_user:      root
+      register:         install_pip2
+
+    - name:             "Display output from PIP2 installation"
+      debug:
+        var:            install_pip2.stdout_lines
+      when:             install_pip2.stdout_lines is defined
+
+    when:
+      -                 check_pip2.rc is defined
+      -                 check_pip2.rc > 0
+
+  when:                 ansible_python_interpreter is search("python2")
+
+# ------------------------------------------------------------------------------
+# Python3 specific tasks to install the current version of PIP3
+# ------------------------------------------------------------------------------
+
+- name:                 "Python3 specific tasks"
+  block:
+
+  - name:               "Install SETUP_TOOLS for EASY_INSTALL on OEL 7+ systems"
+    yum:
+      name:             python-setuptools
+      state:            latest
+
+  - name:               "Install PIP on OEL 7+ systems"
+    easy_install:
+      name:             pip
+      state:            latest
+
+  become:               yes
+  become_user:          root
+  when:                 ansible_python_interpreter is search("python3")
+
+# ------------------------------------------------------------------------------
+# Use PIP to install PEXPECT
+# ------------------------------------------------------------------------------
 
 - name:                 "Use PIP to install PEXPECT on OL 7+ systems"
   pip:
